# brett_blocks

./: .gitignore  DeepDiff_list_output.json  DeepDiff_output.json  MISSION_COMPLETE_SUMMARY.md  PARSE_CSV_CONVERSION_SUMMARY.md  README.md  TESTING.md  cleanup_test_artifacts.py  clear_context_mem.py.output  convert_icon_registry.py  create_data_forms.py  create_skipped_data_forms.py  extract_skipped_objects.py  extract_target_objects.py  fix_duplicate_ids.py  get_unattached_analysis_report.py  match_examples.py  pyproject.toml  pytest.ini  test.bat  test_artifacts.json  test_get_unattached.py  test_notebook_generation.py  test_roundtrip.py  try_blocks.py  try_update.py  typedb_log.txt
.github/: CONVERSION_STATUS.md
.ipynb_checkpoints/: 1 - Build Initial Identities-checkpoint.ipynb
Get_Report/: README.md  config.json  ui_code.html
Import_Bundle/: README.md  script.py
Load_Example_Bundle_Dir/: script.py
Orchestration/: .python-version  1 - Build Initial Identities.ipynb  2 - Create Incident with an Alert.ipynb  Convert_Examples_to_DataForms.ipynb  DeepDiff_object_output.json  Step 3 - Create_more_ data_for_unattached.ipynb  Step_0_Build_Initial_Identities.ipynb  Step_0_User_Setup.ipynb  Step_1 _Create_Incident_with_an_Alert.ipynb  Step_1_Build_Initial_Identities.ipynb  Step_1_Company_Setup.ipynb  Step_2 _Get the Anecdote.ipynb  Step_2_Create_Incident_with_an_Alert.ipynb  Step_3 _Get the Anecdote.ipynb  Step_3 _Get the Context.ipynb  Step_3_Get the Anecdote.ipynb  Test Form Actions.ipynb  Test_Diff.ipynb  Test_Sequence_Chaining.ipynb  Test_Unattached_Context.ipynb  (+31 more)
(+936 files in other folders)
